--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
 	},
 	"dependencies": {
+		"@prisma/client": "^4.6.1",
 		"@types/cors": "^2.8.12",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
@@ -24,6 +25,7 @@
 		"eslint-plugin-import-helpers": "^1.3.1",
 		"eslint-plugin-prettier": "^4.2.1",
 		"prettier": "^2.7.1",
+		"prisma": "^4.6.1",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.9.3"
