--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
 		"no-useless-constructor": "off",
 		"no-empty-function": "off",
 		"lines-between-class-members": "off",
-
+		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/naming-convention": [
 			"error",
 			{
