--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"reflect-metadata": "^0.1.13",
+		"swagger-ui-express": "^4.6.0",
 		"tsyringe": "^4.7.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.14",
 		"@types/node": "^18.11.9",
+		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
 		"eslint": "^8.27.0",
