--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
+		"dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+		"test": "jest --runInBand --detectOpenHandles"
 	},
 	"prisma": {
 		"seed": "ts-node-dev prisma/seed.ts"
@@ -22,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.14",
+		"@types/jest": "^29.2.3",
 		"@types/node": "^18.11.9",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -29,8 +31,10 @@
 		"eslint": "^8.27.0",
 		"eslint-plugin-import-helpers": "^1.3.1",
 		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^29.3.1",
 		"prettier": "^2.7.1",
 		"prisma": "^4.6.1",
+		"ts-jest": "^29.0.3",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.9.3"
