--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   database:
     image: postgres
-    container_name: test_mevo
+    container_name: database
     restart: always
     ports:
       - 5432:5432
@@ -13,6 +13,19 @@ services:
       - POSTGRES_DB=orders
     volumes:
       - pgdata:/data/postgres
+
+  database_tests:
+    image: postgres
+    container_name: database_test
+    restart: always
+    ports:
+      - 5433:5432
+    environment:
+      - POSTGRES_USER=tests
+      - POSTGRES_PASSWORD=test123
+      - POSTGRES_DB=orders_test
+    volumes:
+      - pgdata:/data/postgres_tests
 
 volumes:
   pgdata:
