--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-		"test": "jest --runInBand --detectOpenHandles"
+		"test:before": "set DATABASE_URL=postgresql://tests:test123@localhost:5433/orders_test?schema=public && yarn prisma migrate deploy && yarn prisma db seed",
+		"test": "set DATABASE_URL=postgresql://tests:test123@localhost:5433/orders_test?schema=public && jest --runInBand --detectOpenHandles"
 	},
 	"prisma": {
 		"seed": "ts-node-dev prisma/seed.ts"
@@ -25,6 +26,7 @@
 		"@types/express": "^4.17.14",
 		"@types/jest": "^29.2.3",
 		"@types/node": "^18.11.9",
+		"@types/supertest": "^2.0.12",
 		"@types/swagger-ui-express": "^4.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.43.0",
 		"@typescript-eslint/parser": "^5.43.0",
@@ -34,6 +36,7 @@
 		"jest": "^29.3.1",
 		"prettier": "^2.7.1",
 		"prisma": "^4.6.1",
+		"supertest": "^6.3.1",
 		"ts-jest": "^29.0.3",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
